@@ -1,4 +1,4 @@
-# last modified 2018-04-28 by J. Fox
+# last modified 2018-08-03 by J. Fox
 
 # additions for car 3.0-0, started 2016-12-27
 
@@ -134,7 +134,9 @@ export(
     crPlot,
     crPlots,
     crp,
+    dbiwt,
     deltaMethod,
+    depan,
     dfbetaPlots,
     dfbetasPlots,
     dwt,
